scale3/k8s/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-debug
spec:
  containers:
  - name: alpine-debug
    image: alpine
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
